--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/app.css">
+    <script src="js/main.js"></script>    
 </head>
 <body>
-    <h1>Hello from my workflow</h1>
+    <div class="container">
+        <div class="row">
+            <h1>Hello from my workflow</h1>
+        </div>
+        <div class="row">
+            <div id="example" class="example">
+                
+            </div>
+            <script id="template" type="x-tmpl-mustache">
+                {{#example}}
+                    <h2>{{title}}</h2>
+                    <h3>{{explain}}</h3>
+                {{/example}}
+            </script>
+        </div>
+    </div>
 </body>
 </html>
