--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/app.css">
-    <script src="js/main.js"></script>    
-</head>
-<body>
+<!-- partial:partial/_header.html -->
+<!-- partial -->
+
     <div class="wrap">
         <h1>my web workflow with npm, sass, gulp and more</h1>
         <div class="logos">
@@ -25,5 +18,6 @@
             {{/example}}
         </script>
     </div>
-</body>
-</html>
+
+<!-- partial:partial/_footer.html -->
+<!-- partial -->
