--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,4 @@
+<!-- partial:partial/_header.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/app.css">
-    <script src="js/main.js"></script>    
 </head>
 <body>
+<!-- partial -->
+
     <div class="wrap">
         <h1>my web workflow with npm, sass, gulp and more</h1>
         <div class="logos">
@@ -25,5 +27,9 @@
             {{/example}}
         </script>
     </div>
+
+<!-- partial:partial/_footer.html -->
+    <script src="js/main.js"></script>        
 </body>
 </html>
+<!-- partial -->
